# open-lpr-sdk

./: .gitignore  CMakeLists.txt  embed_model.py  test_detector.py  test_ocr.py  test_onnx.py
android/: local.properties
include/: lpr.h
src/: lpr.cpp
tests/: test.cpp  test.py
